[Frontend] Ensure special embed spacing works again
Follow-up to commit a8695f8c220a6de58dbdccf2500a87cec933a34c.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -176,19 +176,20 @@ body {
  * For .embed-first, a negative top margin seems not to affect the embed (or
  * anything at all), so we transform the embed up instead, and cover the fact
  * up by a negative bottom margin. */
-.message > .line .content .message-text .embed-block.embed-first {
+.message > .line .content .message-text .embed-outer.block.embed-first {
   -webkit-transform: translateY(-1px);
   transform: translateY(-1px);
   margin: 0;
 }
-.message > .line .content .message-text .embed-block.embed-first +
+.message > .line .content .message-text .embed-outer.block.embed-first +
 .embed-block {
   margin-top: 0;
 }
-.message > .line .content .message-text .embed-block.embed-last {
+.message > .line .content .message-text .embed-outer.block.embed-last {
   margin-bottom: -1px;
 }
-.message > .line .content .message-text .embed-block.embed-first.embed-last {
+.message > .line .content .message-text
+.embed-outer.block.embed-first.embed-last {
   margin-bottom: -2px;
 }
 .message > .line .content .message-text .embed-inline.embed-first.embed-last {
